2002-12-06  Matthias Clasen  <maclas@gmx.de>

	* gdk/tmpl/x_interaction.sgml: 
	* gdk/tmpl/gdkscreen.sgml: 
	* gdk/tmpl/gdkdisplaymanager.sgml: 
	* gdk/tmpl/gdkdisplay.sgml: 
	* gtk/tmpl/gtkstock.sgml: 
	* gtk/tmpl/gtkwidget.sgml: 
	* gtk/tmpl/gtkmain.sgml: 
	* gtk/tmpl/gtkcolorsel.sgml: 
	* gtk/tmpl/gtkaccelgroup.sgml: 
	* gdk-pixbuf/tmpl/module_interface.sgml: Add "Since" information.

	* gtk/gtk-sections.txt: Replace gtk_list_store_move by
	_move_before and _move_after.

2002-11-29  Matthias Clasen  <maclas@gmx.de>

	* gtk/tmpl/gtkalignment.sgml: 
	* gtk/tmpl/gtkadjustment.sgml: 
	* gtk/tmpl/gtkaccellabel.sgml: 
	* gtk/tmpl/gtkoldeditable.sgml: 
	* gtk/tmpl/gtkwidget.sgml: 
	* gtk/tmpl/gtkrange.sgml: 
	* gtk/tmpl/gtkeditable.sgml: 
	* gtk/tmpl/gtkwindowgroup.sgml:
	* gtk/tmpl/gtkwindow.sgml: 
	* gtk/tmpl/gtktypeutils.sgml: 
	* gtk/tmpl/gtksignal.sgml: 
	* gtk/tmpl/gtkfeatures.sgml: 
	* gtk/tmpl/gtkstyle.sgml: 
	* gtk/tmpl/gtkselection.sgml: 
	* gtk/tmpl/gtkgc.sgml: 
	* gtk/tmpl/gtkenums.sgml: 
	* gtk/tmpl/gtkbindings.sgml: 
	* gtk/tmpl/gtksettings.sgml: 
	* gtk/tmpl/gtkdnd.sgml: 
	* gtk/tmpl/gtkclipboard.sgml: 
	* gtk/tmpl/gtkaccelgroup.sgml: 
	* gtk/tmpl/gtkaccelmap.sgml: 
	Minor tweaks and completions of shortdescs.
	
	* gdk/tmpl/rgb.sgml: 
	* gdk/tmpl/gcs.sgml: Minor tweaks.

	* gdk/tmpl/gdkdisplaymanager.sgml: Add some docs.

2002-11-27  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtk-sections.txt: Replace gtk_tree_store_move by
	_move_before and _move_after.

2002-11-26  Matthias Clasen  <maclas@gmx.de>

	* gdk/tmpl/threads.sgml: Add hint about calling gdk_flush() before
	gdk_threads_leave().  (#70665, wording suggested by Owen Taylor)

2002-11-23  Matthias Clasen  <maclas@gmx.de>

	* gdk/tmpl/x_interaction.sgml: 
	* gdk/tmpl/pango_interaction.sgml: 
	* gdk/tmpl/input_devices.sgml: 
	* gdk/tmpl/input.sgml: 
	* gdk/tmpl/threads.sgml: 
	* gdk/tmpl/properties.sgml: 
	* gdk/tmpl/dnd.sgml: 
	* gdk/tmpl/selections.sgml: 
	* gdk/tmpl/keys.sgml: 	