@@ -1,3 +1,7 @@
+2002-12-08  Matthias Clasen  <maclas@gmx.de>
+
+	* gdk-pixbuf/tmpl/module_interface.sgml: Add docs.	
+
 2002-12-06  Matthias Clasen  <maclas@gmx.de>
 
 	* gdk/tmpl/x_interaction.sgml: 
